# transcripto

./: .gitignore  BLOCKERS.md  CLAUDE.md  DEVLOG.md  GUIDE.md  audio_transcriber.py  build.sh  pyproject.toml
.claude/: settings.json
data/IBMTechnology/: video_list.json
data/IBMTechnology/transcription/: Cybersecurity Explained in 3 Acronyms: CIA, PDR, & PPT.md  How Linear Algebra Powers Machine Learning (ML).md  Multi AI Agent Systems When One AI Brain Isn’t Enough.md
data/PulpPodcast/transcription/: Renzi VS. Vannacci il CONFRONTO. Pulp Podcast #55.md
data/SimoneRizzo/transcription/: Converti Libri in Skills di Claude per la tua Knowledge Base.md  SimoneRizzo_Vibecoding_Live.md
data/YourCoolUncleMarisa/transcription/: Cool Uncle Mods Jailbreaking the Kindle 4.md
data/ascensore_media/: video_list.json
data/ascensore_media/transcription/: Advertising backpacks Elevator EP.8.md  Alberto Forchielli as a judge! Elevator EP.6.md  Elevator EP.0 Teaser.md  Finalmente un prodotto fisico! Ascensore EP.2.md  I don't see a 10-year vision Elevator EP.7.md  Investors evaluate 4 startups Elevator EP.0.md  Non mi sembra possa diventare una startup Ascensore EP.1.md  What a shitty business! Elevator EP.3.md  What the hell have you been doing since September Elevator EP.5.md  You need to grow extremely fast Ascensore final EP. from Bending Spoons.md  “Vedo red flag un po’ dappertutto” Ascensore EP.4.md
src/: Info.plist  extract.py  metadata.py  pipeline.py  transcribe  transcribe.swift  transcriber.py  yt_downloader.py  yt_scraper.py
(+3 files in other folders)
