[project]
name = "transcripto"
version = "0.1.0"
description = "Video/audio to on-device transcription pipeline"
authors = [
    {name = "ghMellow"}
]
requires-python = ">=3.13"
dependencies = ["pyobjc-framework-speech (>=12.1,<13.0)"]

[project.scripts]
transcripto = "src.pipeline:main"

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
